<resources>


    <!--画面のタイトル-->
    <string name="app_name">BlasJ</string>
    <string name="title_login">ログイン画面</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_token">test_token</string>
    <string name="title_activity_terminal">TerminalActivity</string>
    <string name="title_item_edit">データ編集画面</string>
    <string name="title_item_image">画像編集画面</string>
    <string name="title_item_image_zoom"></string>

    <!-- パラメータ―不正系 -->
    <string name="username_null">ユーザ名が指定されていません</string>
    <string name="password_null">パスワードが指定されていません</string>
    <string name="user_name_too_long">ユーザ名が長すぎます</string>
    <string name="password_too_long">パスワードが長すぎます</string>
    <string name="twoauth_null">認証コードが指定されていません</string>
    <string name="twoauth_wrong">認証コードが誤っています</string>
    <string name="twoauth_time_over">認証コードの時間切れです。再度ログインして下さい</string>


    <!-- データ系 -->
    <string name="record_not_found">レコードがありません。</string>

    <!-- エラー系 -->
    <string name="download_error">ファイルダウンロードでエラーが起きました</string>
    <string name="uri_error">ファイルが見つかりません。</string>
    <string name="check_error">値が異なります。備考を入力してください</string>


    <!-- 通信系 -->

    <string name="String">test</string>
    <string name="title_activity_item">ItemActivity</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>

    <!--ナビバータイトル-->
    <!--ターミナル画面-->
    <string name="navi_title_terminal_dashboard">掲示板</string>
    <string name="navi_title_terminal_item">データ管理</string>
    <string name="navi_title_terminal_fixture">機器管理</string>
    <string name="navi_title_terminal_logout">ログアウト</string>
    <string name="navi_title_terminal_status">ステータス</string>
    <string name="navi_title_terminal_web">ウェブ</string>
    <!--データ管理画面-->
    <string name="navi_title_item_search">データ検索</string>
    <string name="navi_title_item_search_result">データ検索結果</string>
    <string name="navi_title_item_view">データ一覧</string>
    <string name="navi_title_item_create">データ新規作成</string>
    <string name="navi_title_item_drawing_search">図面検索</string>
    <string name="menu_title_item_status">送信状態</string>
    <!--機器管理画面-->
    <string name="navi_title_fixture_search">機器検索</string>
    <string name="navi_title_fixture_search_result">機器検索結果</string>
    <string name="navi_title_fixture_kenpin">機器検品</string>
    <string name="navi_title_fixture_motidasi">機器持ち出し</string>
    <string name="navi_title_fixture_return">機器返却</string>
    <string name="navi_title_fixture_view">機器一覧</string>
    <string name="menu_title_fixture_config">検品の設定</string>

    <!--WebView-->
    <string name="navi_title_webview">WebView</string>
    <!--共通-->
    <string name="navi_title_back">戻る</string>
    <!-- コンテキストメニュー-->
    <string name="context_img_zoom">拡大する</string>

    <!--　メッセージ -->
    <string name="success_qr">QRコード読を読み取りました</string>
    <string name="error_create_qr">すでに登録済のQRコードです</string>
    <string name="error_session_qr">通信エラーのため、機器情報を登録できません</string>
    <string name="success_data_create">新規作成に成功しました</string>
    <string name="error_data_create">新規作成に失敗しました</string>
    <string name="success_data_update">更新に成功しました。</string>
    <string name="error_data_update">更新に失敗しました。</string>
    <string name="error_image_get">画像の取得に失敗しました。</string>


    <!-- 選択肢 -->
    <string-array name="fixture_status_list">
        <item>すべて</item>
        <item>持出可</item>
        <item>持出中</item>
        <item>設置済</item>
        <item>持出不可</item>
    </string-array>

    <!-- 検索画面の項目等 -->
    <string name="col_free_word">フリーワード</string>
    <string name="col_serialnumber">シリアルナンバー</string>
    <string name="col_data_id">データID</string>
    <string name="col_status">ステータス</string>
    <string name="col_kenpin_user">検品したユーザ</string>
    <string name="col_takeout_user">持出したユーザ</string>
    <string name="col_return_user">返却したユーザ</string>
    <string name="col_item_user">設置したユーザ</string>
    <string name="col_kenpin_org">検品した会社</string>
    <string name="col_takeout_org">持出した会社</string>
    <string name="col_return_org">返却した会社</string>
    <string name="col_item_org">設置した会社</string>
    <string name="col_kenpin_date">検品した日</string>
    <string name="col_takeout_date">持出した日</string>
    <string name="col_return_date">返却した日</string>
    <string name="col_item_date">設置した日</string>
    <string name="col_item_id">itemId</string>
    <string name="col_datetime">時間</string>
    <string name="col_day">日付</string>
    <string name="col_account">アカウント名を入力する</string>


    <!-- 登録データ画像 -->
    <string name="cell_item_image_delete">削除</string>
    <string name="cell_item_image_right_rotate">右回転</string>
    <string name="cell_item_image_left_rotate">左回転</string>
    <string name="cell_item_image_upload">画像ファイル選択</string>
    <string name="cell_item_image_loading">画像ファイル読込中。。。</string>

    <!-- 表示画面-->
    <string name="switch_normal">通常</string>
    <string name="switch_end_flg">ゴミ箱</string>
    <string name="switch_view">表示する</string>

    <!-- ダイアログ -->
    <string name="dialog_title">メッセージ</string>
    <string name="search_error">検索条件に合致するレコードは存在しません</string>


    <!-- メッセージ -->
    <string name="token_invalid">トークンが不正です</string>
    <string name="token_expired">トークンの有効期限が切れています</string>
    <string name="internal_error">サーバでエラーが発生しました</string>
    <string name="already_logout">すでに開放済みです</string>
    <string name="account_error">ユーザ名，またはパスワードに誤りがあります</string>
    <string name="create_token_error">トークンの作成に失敗しました</string>
    <string name="temp_user_error">仮登録中のためログインできません</string>
    <string name="user_lock_error">ログインできませんでした（ロックされています）</string>
    <string name="perm_no_error">アクセス権限がありません</string>
    <string name="not_found_record">レコードが見つかりません</string>
    <string name="add_record_error">レコードの追加に失敗しました</string>
    <string name="update_record_error">レコードの更新に失敗しました</string>
    <string name="delete_record_error">レコードの削除に失敗しました</string>
    <string name="not_found_param">必須パラメーターが指定されていません</string>
    <string name="not_found_id">指定されたIDは存在しません</string>
    <string name="set_param_error">同時に指定できません</string>
    <string name="invalid_param">不正な値が指定されています</string>
    <string name="not_found_image">画像はありません</string>
    <string name="out_of_range">指定された値が範囲外です</string>
    <string name="data_dupli_error">重複不可の項目で値が重複しています</string>
    <string name="set_fx_error">設置機器が登録されているものと異なります</string>
    <string name="set_refx_error">撤去機器が登録されているものと異なります</string>
    <string name="not_entry_takeout">持出登録が行われていません</string>
    <string name="diff_user">設置者と作業者が異なります</string>
    <string name="already_set">すでに設置済みです</string>
    <string name="already_check">検品済みです</string>
    <string name="dont_takeout">持出しできない機器です</string>
    <string name="fx_not_entry">未登録のシリアルナンバーです</string>
    <string name="already_takeout">すでに持出中です</string>
    <string name="not_entry_id">指定されたＩＤは登録されていません</string>
    <string name="already_return">すでに返却済みです</string>
    <string name="already_removal_rentry">既に撤去登録済みです</string>
    <string name="not_entry_removal">撤去登録されていません</string>
    <string name="not_removal_serial">撤去されていないシリアルナンバーです</string>
    <string name="already_removal_comp">すでに撤去完了済みです</string>
    <string name="image_cant_access">画像ファイルにアクセスできませんでした。リトライしてください</string>
    <string name="image_save_error">画像の保存に失敗しました</string>
    <string name="image_cant_del">削除する画像がありません</string>
    <string name="apl_queue_save">アプリで継続して送信を行います。ステータス画面で結果を確認して下さい</string>
    <string name="apl_queue_max">アプリ自動送信処理が上限に達しました。再度実行して下さい</string>
    <string name="server_error">サーバ内でエラーが発生しました。管理者に連絡してください。要因コード(%1$d)</string>
    <string name="network_error">サーバと通信できません。</string>
    <string name="json_parse_error">データが読み込めませんでした</string>
    <string name="file_read_error">ファイルが読み込めませんでした</string>
    <string name="version_error">最新のバージョンにアップデートしてください</string>

    <!--受け取り失敗系-->
    <string name="other_recieve_error">内部データの取得に失敗しました。</string>

    <string name="all_sync_text">未送信\n%1$d件</string>

    <!-- プレファレンスの名前 -->
    <string name="BlasAppConfig">BlasAppConfig</string>

    <!-- GEO -->
    <string name="geo_api_key">AIzaSyB8rdIoHOf5Ki-F6yHQvwpGeTXlqsdcCPM</string>
    <string name="title_activity_maps">Map</string>

</resources>
