<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_navigation_fixture.xml"
    app:startDestination="@id/navi_fixture_view">

    <fragment
        android:id="@+id/navi_fixture_view"
        android:name="com.v3.basis.blas.ui.fixture.fixture_view.FixtureViewFragment"
        android:label="@string/navi_title_fixture_view"/>

    <fragment
        android:id="@+id/navi_fixture_kenpin"
        android:name="com.v3.basis.blas.ui.fixture.fixture_kenpin.FixtureKenpinFragment"
        android:label="@string/navi_title_fixture_kenpin"/>

    <fragment
        android:id="@+id/navi_fixture_motidasi"
        android:name="com.v3.basis.blas.ui.fixture.fixture_takeout.FixtureTakeOutFragment"
        android:label="@string/navi_title_fixture_motidasi"/>

    <fragment
        android:id="@+id/navi_fixture_return"
        android:name="com.v3.basis.blas.ui.fixture.fixture_return.FixtureReturnFragment"
        android:label="@string/navi_title_fixture_return"/>

    <fragment
        android:id="@+id/navi_fixture_search"
        android:name="com.v3.basis.blas.ui.fixture.fixture_search.FixtureSearchFragment"
        android:label="@string/navi_title_fixture_search"/>

</navigation>